@@ -1,3 +1,11 @@
+1998-01-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* BankObserverSwarm.m ([BankObserverSwarm -buildObjects]): Prefix
+	archiving keys with "probeDisplay" for bankModelSwarm and
+	bankObserverSwarm probe displays.
+
+	* Makefile (SWARMHOME): Default to 1.0.5.
+
 1998-01-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* main.m (main): Set basename of observerSwarm.  Minor reformatting.
